Index spacing fix.

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -40,7 +40,7 @@ li a i {
   margin-right: 1em;
 }
 
-#maincol {
+#maincol:not(.postlist) {
   padding-top: 2rem;
 }
 
